# llmisms

./: .gitignore  plan.md  pyproject.toml  readme.md  requirements-upnquick.lock.txt  requirements-upnquick.txt  requirements.txt
llmisms/: __init__.py  analysis.py  cli.py  config.py  corpus.py  generation.py  math_utils.py  patterns.py  records.py  scoring.py  tagging.py
scripts/: browse_generations.py  convert_checkpoint_bf16.py  remote_session.sh  run_upnquick.sh
tests/: test_pipeline.py
